resources/other/internet_gateway.yaml
Resources:
  # InternetGateway for VPC
  InternetGateway:
    DependsOn: MainVPC
    Type: AWS::EC2::InternetGateway
  AttachInternetGateway:
    DependsOn:
      - MainVPC
      - InternetGateway
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MainVPC
      InternetGatewayId:
        Ref: InternetGateway
  # NAT and Elastic IP for VPC
  EIP:
    DependsOn:
      - MainVPC
      - AttachInternetGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NAT:
    DependsOn:
      - AttachInternetGateway
      - PublicSubnet1
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::Sub: '${EIP.AllocationId}'
      SubnetId:
        Ref: PublicSubnet1
  # Route Subnet association
  RouteToInternetGateway:
    DependsOn:
      - PublicSubnet1RouteTableAssociation
      - PublicSubnet2RouteTableAssociation
      - PublicSubnet3RouteTableAssociation
      - PrivateSubnet1RouteTableAssociation
      - PrivateSubnet2RouteTableAssociation
      - PrivateSubnet3RouteTableAssociation
      - AttachInternetGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  RouteToNAT:
    DependsOn:
      - PrivateRouteTable
      - NAT
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT
